# uri2pact

./: CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
domains/browser_ops/: README.md  domain.yaml  operator_registry.yaml  scenario_registry.yaml
domains/desktop_ops/: README.md  domain.yaml  operator_registry.yaml  scenario_registry.yaml
domains/office/: scenario_registry.yaml
domains/physical_ops/: domain.yaml  scenario_registry.yaml
domains/weather_map/: registry.fragment.yaml
tests/: test_markpact_scenarios.py
