[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2pact"
version = "0.1.0"
description = "Markpact/pactown README import — fenced blocks to capability/flow YAML."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["uri2pact*"]
